--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
         </nav>
         <div class="social-icons">
             <ul>
-            <li><p>Whatsapp (31) 999324285</p></li>
+                <a href="https://w.app/5stear" target="_blank">
+                    <img src="pngwing.com (1).png" alt="Whatsapp">
             <a href="https://www.instagram.com/explore/locations/107702420890687/fazenda-itimirim/" target="_blank">
                 <img src="instalogo.svg" alt="Instagram">
             </a>
@@ -32,88 +33,72 @@
             </ul>
         </div>
     </header>
-
     <main>
-
-        <section id="sobre" class="split">
+        <nav id="sobre" class="split">
             <div class="image">
                 <img src="imagem-2.jpg" alt="Imagem sobre a empresa" />
             </div>
-            <div class="content">
-                <h2>Sobre nós</h2>
-                <p>A Fazenda Itimirim é uma empresa familiar itabirana com mais de duas décadas de experiência na produção de doces e quitandas caseiras. Com um compromisso inabalável com a qualidade e a autenticidade, a empresa preserva as tradições da culinária mineira, atendendo a mais de 100 clientes, incluindo supermercados e comércios locais. A Fazenda Itimirim é sinônimo de sabor inigualável e tradição, conquistando paladares e promovendo a rica cultura culinária do interior de Minas Gerais na região.</p>
-            </div>
-        </section>
+        </nav>
         <section id="produtos" class="produts">
             <h2>Nossos produtos</h2>
             <div class="grid-container">
                 <div class="grid-item">
-                    <img src="amendoim-doce.jpg" alt="Amendoim Doce">
+                    <img src="BEIJO QUENTE - EMBALADO.jpg" alt="Amendoim Doce">
                     <h3>Amendoim Doce (Beijo Quente)</h3>
                     <p>Amendoim torrado e caramelizado com uma camada crocante de açúcar e chocolate, proporcionando um doce super saboroso e irresistível.</p>
                 </div>
                 <div class="grid-item">
-                    <img src="amendoim-salgado.jpeg" alt="Amendoim Salgado">
+                    <img src="AMENDOIM COM SAL EMBALADO.jpg" alt="Amendoim Salgado">
                     <h3>Amendoim Salgado</h3>
                     <p>Amendoim torrado com uma pitada de sal, ideal para petiscar e perfeito como acompanhamento em diversas ocasiões.</p>
                 </div>
                 <div class="grid-item">
-                    <img src="Biscoito-de-polvilho.jpg" alt="Biscoito de Polvilho">
+                    <img src="BISCOITO DE POLVILHO - PCT PEQUENO.jpg" alt="Biscoito de Polvilho">
                     <h3>Biscoito de Polvilho</h3>
                     <p>Leve e crocante, o biscoito de polvilho é um clássico mineiro um lanche delicioso.</p>
                 </div>
                 <div class="grid-item">
-                    <img src="broa-chocolate.jpg" alt="Broa de Gotas de Chocolate">
+                    <img src="BROA DE GOTAS DE CHOCOLATE 3.jpg" alt="Broa de Gotas de Chocolate">
                     <h3>Broa de Gotas de Chocolate</h3>
                     <p>Similar a um bolinho macio, é repleta de deliciosas gotas de chocolate. Ideal para quem aprecia uma combinação deliciosa de massa fofa e pedacinhos de chocolate.</p>
                 </div>
                 <div class="grid-item">
-                    <img src="broa-coco.jpeg" alt="Broa de Coco">
+                    <img src="BROA DE COCO.jpg" alt="Broa de Coco">
                     <h3>Broa de Coco</h3>
                     <p>Macia e saborosa é enriquecida com coco ralado, trazendo sabor autêntico a cada mordida.</p>
                 </div>
                 <div class="grid-item">
-                    <img src="broa-fuba.jpg" alt="Broa de Fubá">
+                    <img src="BROA DE FUBÁ.jpg" alt="Broa de Fubá">
                     <h3>Broa de Fubá</h3>
                     <p>Tradicional e saborosa feita com fubá de milho, proporcionando um sabor nostálgico e uma textura única.</p>
                 </div>
                 <div class="grid-item">
-                    <img src="broa-nata.jpg" alt="Broa de Nata">
-                    <h3>Broa de Nata</h3>
-                    <p>Esta broa com sabor de nata, possui uma textura macia e suave.</p>
-                </div>
-                <div class="grid-item">
-                    <img src="broa-queijo.jpg" alt="Broa de Queijo">
+                    <img src="BROA DE QUEIJO 2.jpg" alt="Broa de Queijo">
                     <h3>Broa de Queijo</h3>
                     <p>Super macia, essa broa é enriquecida com queijo, proporcionando um sabor irresistível e um aroma delicioso.</p>
                 </div>
                 <div class="grid-item">
-                    <img src="broa-rapadura.jpg" alt="Broa de Rapadura">
-                    <h3>Broa de Rapadura</h3>
-                    <p>Feita com rapadura, essa broa combina a doçura natural da cana de açúcar com a textura macia e sabor marcante.</p>
-                </div>
-                <div class="grid-item">
-                    <img src="cajuzinho.jpg" alt="Cajuzinho">
+                    <img src="CAJUZINHO.jpg" alt="Cajuzinho">
                     <h3>Cajuzinho</h3>
                     <p>Tradicional docinho brasileiro, feito com amendoim, açúcar e chocolate, moldado em formato de caju e geralmente decorado com um pedaço de amendoim no topo.</p>
                 </div>
                 <div class="grid-item">
-                    <img src="farinha-amendoim.jpg" alt="Farinha de Amendoim">
+                    <img src="FARINHA DE AMENDOIM.jpg" alt="Farinha de Amendoim">
                     <h3>Farinha de Amendoim</h3>
                     <p>Amendoim torrado, fubá e rapadura são transformados em uma farinha fina e aromática, com um sabor inigualável.</p>
                 </div>
                 <div class="grid-item">
-                    <img src="pao-caseiro.jpg" alt="Pão Caseiro">
+                    <img src="PÃO CASEIRO.jpg" alt="Pão Caseiro">
                     <h3>Pão Caseiro</h3>
                     <p>Pão macio e saboroso, feito com ingredientes simples e tradicionais, proporcionando um aroma e sabor caseiro inigualável.</p>
                 </div>
                 <div class="grid-item">
-                    <img src="pao-cebola.jpg" alt="Pão de Cebola">
+                    <img src="PÃO DE CEBOLA.jpg" alt="Pão de Cebola">
                     <h3>Pão de Cebola</h3>
                     <p>Pão artesanal enriquecido com cebola fresca, que adiciona um sabor suave e levemente adocicado, ideal para acompanhar qualquer refeição.</p>
                 </div>
                 <div class="grid-item">
-                    <img src="rosquinha-queijo.jpg" alt="Rosquinha de Queijo">
+                    <img src="ROSQUINHA DE QUEIJO.png" alt="Rosquinha de Queijo">
                     <h3>Rosquinha de Queijo</h3>
                     <p>Rosquinhas super macias, feitas com queijo, oferecem um sabor delicioso e um aroma irresistível, perfeitas para o café da manhã ou lanche.</p>
                 </div>
